--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -1,4 +1,19 @@
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 10px;
+}
+
 .label {
-    margin-bottom: 10px;
-    margin-top: 20px;
+    font-size: 20px;
+}
+.input {
+  width: 20px;
+  height: 20px;
+}
+
+.btn {
+    margin-left: 10px;
 }
